--- a/_posts/2024-05-12-未来数据库架构/2024-05-12-未来数据库架构（翻译）.md
+++ b/_posts/2024-05-12-未来数据库架构/2024-05-12-未来数据库架构（翻译）.md
@@ -8,7 +8,7 @@ layout: post
 
 本文是对SIGMOD2023短文[Future of Database System Architectures](https://dl.acm.org/doi/abs/10.1145/3555041.3589360)的翻译。
 
-![Future of Database System Architectures](./paper.png)
+![Future of Database System Architectures](../../assets/img/2024-05-12-未来数据库架构/paper.png)
 
 # 未来数据库架构
 ## 摘要
