--- a/_posts/2024-06-05-gdb编译调试bug/2024-06-05-gdb编译调试bug.md
+++ b/_posts/2024-06-05-gdb编译调试bug/2024-06-05-gdb编译调试bug.md
@@ -8,6 +8,9 @@ layout: post
 
 # gdb调试bug
 
+```shell
 Dwarf Error: wrong version in compilation unit header (is 5, should be 2, 3, or 4) no debugging symbols found
+```
 
-这个bug原因是gdb识别到了不兼容的Dwarf版本，导致找不到调试信息。这种情况是因为gcc版本相较于gdb版本太高，解决方法是，升级gdb版本到8.0以上（支持Drawf 5），或者在gcc编译时加入调试信息`-gdwarf=4`
+
+这个bug原因是gdb识别到了不兼容的Dwarf版本，导致找不到调试信息。这种情况是因为gcc版本相较于gdb版本太高，解决方法是，升级gdb版本到8.0以上（支持Drawf 5），或者在gcc编译时加入`-gdwarf=4`让其生成dwarf=4的调试信息
