--- a/_posts/2024-06-05-gdb编译调试bug/2024-06-05-gdb编译调试bug.md
+++ b/_posts/2024-06-05-gdb编译调试bug/2024-06-05-gdb编译调试bug.md
@@ -2,7 +2,7 @@
 title: gdb调试bug
 date: 2024-06-04 00:00:00
 tags: [gdb, dwarf error]
-description: gdb编译调试bug：Dwarf Error: wrong version in compilation unit header (is 5, should be 2, 3, or 4)
+description: gdb编译调试bug, Dwarf Error  wrong version in compilation unit header (is 5, should be 2, 3, or 4)
 layout: post
 ---
 
