--- a/_posts/2024-06-05-gdb编译调试bug/2024-06-05-cpp编译调试bug.md
+++ b/_posts/2024-06-05-gdb编译调试bug/2024-06-05-cpp编译调试bug.md
@@ -20,6 +20,21 @@ layout: post
 #endif
 ```
 
+# valgrind使用
+[valgrind](https://sourceware.org/pub/valgrind/valgrind-3.23.0.tar.bz2)是一个很好用的检测内存泄漏的工具，有很多用法。下面介绍如何安装valgrind以及如何使用
+```shell
+# valgrind install
+wget https://sourceware.org/pub/valgrind/valgrind-3.23.0.tar.bz2
+bzip2 -d valgrind-3.23.0.tar.bz2
+tar -xf valgrind-3.23.0.tar
+cd valgrind-3.23.0
+./configure && make
+make install
+
+# valgrind use
+valgrind --tool=memcheck --leak-check=full ${program}
+```
+
 ### memcpy和char *
 这是一个很细节的bug，当我们使用memcpy拷贝字符串内容到char *时，memcpy不会自动在char *末尾补\0。因此直接使用这个拷贝后的字符串可能会出现一些很神奇的bug，比如发现末尾多了几个乱码字符。。。这种情况我们需要额外使用一个size参数限定这个字符串的长度。
 ```cpp
