--- a/_posts/2024-07-26-学术论文写法/2024-07-26-学术论文写法（长期更新）.md
+++ b/_posts/2024-07-26-学术论文写法/2024-07-26-学术论文写法（长期更新）.md
@@ -11,6 +11,7 @@ layout: post
 
 **采用`Overview` + `Design`的写法，在`Overview`部分，我们先讲解系统的整体架构`architecture`，以及各个模块的作用，以及它们之间的关系。在`Design`部分，我们再细讲`A`, `B`,`C`模块的具体是如何设计的。并且在讲`A`时，涉及到`B`的部分可以用`B`的名字来指代，然后引用`B`部分的内容"We will discuss B in section\*\*"** 
 
+通常在12页的论文中，这一部分应该要写到第8页左右。
 
 
 ## 2. Contribution
@@ -29,3 +30,10 @@ layout: post
 写论文时，`Introduction`是很重要的部分！！但是我们在具体写的时候可以放到最后来写。
 
 未完待续
+
+
+## 4. Implementation
+如果我们是在一个真实系统中实现的，那么我们可以在这一部分描述我们是如何实现的。
+
+## 5. Acknowledgement
+致谢部分，一般是中稿之后再写。
