--- a/_posts/2024-07-26-学术论文写法/2024-07-26-学术论文写法（长期更新）.md
+++ b/_posts/2024-07-26-学术论文写法/2024-07-26-学术论文写法（长期更新）.md
@@ -11,12 +11,16 @@ layout: post
 
 **采用`Overview` + `Design`的写法，在`Overview`部分，我们先讲解系统的整体架构`architecture`，以及各个模块的作用，以及它们之间的关系。在`Design`部分，我们再细讲`A`, `B`,`C`模块的具体是如何设计的。并且在讲`A`时，涉及到`B`的部分可以用`B`的名字来指代，然后引用`B`部分的内容"We will discuss B in section\*\*"** 
 
-通常在12页的论文中，这一部分应该要写到第8页左右。
+通常在12页的论文中，这一部分要写到第8页左右。
 
 
 ## 2. Contribution
 
-在写贡献点时，我们需要强调我们这个贡献点的作用。也就是`design + effect`的格式。通常是下面的句式
+在写贡献点时，我们需要强调我们这个贡献点的作用。也就是`design + effect`的格式。
+需要注意的是`effect`部分要回扣到我们的总目标。例如我们要实现的目标是T，在写创新点时，可以这么写：我们提出了A策略，达到了XXX效果，**最终对实现目标T有XXX作用**
+
+
+通常是下面的句式
 
 ```
 1. We present *** method, which enables ***.
@@ -33,7 +37,23 @@ layout: post
 
 
 ## 4. Implementation
+
 如果我们是在一个真实系统中实现的，那么我们可以在这一部分描述我们是如何实现的。
 
-## 5. Acknowledgement
+## 5. Evaluations/Experiments
+
+我们需要用实验证明我们提出的创新点是有效的，因此我们在设置实验时，需要注意以下几点：
+
+1. 实验需要和提出的创新点相对应，这一部分需要保证完整，不能遗漏某个创新点的实验。
+2. 实验条件需要有说服力，一方面需要尽可能保证公平，另一方面尽可能保证单一变量，这一点是说，我们在验证某一个创新点时，需要排除其他因素的影响，也可以说是消融实验。
+
+<!-- 在写实验部分时，需要注意以下几点：
+**实验设置：** 实验设置部分需要讲清楚以下三点：
+2. 讲具体的实验时，可以遵循以下的格式： -->
+
+
+
+
+## 6. Acknowledgement
+
 致谢部分，一般是中稿之后再写。
