--- a/_posts/2025-12-15-关于自我/2025-12-14-关于自我.md
+++ b/_posts/2025-12-15-关于自我/2025-12-14-关于自我.md
@@ -9,4 +9,6 @@ layout: post
 
 自我这个概念其实非常宏大，其实我能感受到我内心有一股力量，虽然这股力量在我的青少年时期一直处于被压制的状态，但是我内心告诉我我不是一个循规蹈矩的人。我内心同时有两股力量，一股力量告诉破坏那些让我不舒服的制度和规则，一股力量让我创造，我要创造一个属于我的世界。可以说，我过往遭受的一切痛苦都是因为我没有认识到我的内心，而更痛苦的是我认识到我的内心，但是内心的想法却被一切制度和规则所压制。
 
-这些规则和制度通过恐惧压制个体内心的想法。可以说，现代社会已经很难用暴力手段给他人内心根植恐惧，那么我们要如何控制如此多的人呢？答案是通过思想灌输恐惧。告诉每个个体，如果不按规则办事，就会遭到集体的抛弃，这是一种手段。告诉学生，如果成绩不好，未来找不到工作，生活困苦；作为个体，如果要真正找回自我，第一点就是破除恐惧，破除社会的规训对个体的压制，真正去释放自己内心的能量
+这些规则和制度通过恐惧压制个体内心的想法。可以说，现代社会已经很难用暴力手段给他人内心根植恐惧，那么我们要如何控制如此多的人呢？答案是通过思想灌输恐惧。告诉每个个体，如果不按规则办事，就会遭到集体的抛弃，这是一种手段。告诉学生，如果成绩不好，未来找不到工作，生活困苦；作为个体，如果要真正找回自我，第一点就是破除恐惧，破除社会的规训对个体的压制，真正去释放自己内心的能量。
+
+恐惧的植入来源不止社会，毫不客气的说，大部分人与人之间的交往表面之下也伴随恐惧的植入。为什么会这样呢？因为恐惧实际上隐藏一种权利的支配，只要成功在对方身上植入恐惧，那么对方则很容易受自己控制，这种恐惧的植入甚至植入者本人自己并没有意识到。作为个体，这种关系是必须要远离的，如果无法远离，那么对于恐惧的植入则一定要给予回击，回击往往是非常有效的方式。因为会用植入恐惧来控制别人的人，往往是脆弱的，没有力量的，这种人只要给予一次回击，那么实际上是反向给他植入了恐惧。不要怕一些位高权重者，因为生命只有一次，实际上拥有更多的人，更害怕失去，心理力量也就越脆弱。
